--- a/style.css
+++ b/style.css
@@ -70,21 +70,20 @@ h2.top {
 
 button {
     margin: 0px auto 0px;
-
+    padding: 0px 15px 0px;
     border-radius: 10px;
+    background-image: linear-gradient(to top, #040c24, #3a4c7a);
 }
 
 a.enter-button {
     font-size: xx-large;
     text-decoration: none;
     color: #f9faf8;
-    /* background-image: linear-gradient(to bottom, rgb(117, 117, 117), transparent); */
-    background-image: linear-gradient(to top, #040c24, #3a4c7a);
     font-family: sans-serif;
     padding-inline: 10px 10px;
 }
 
-p {
+p.top-text {
     font-size: 18px;
     color: #e5e7eb;
     padding-left: 50px;
@@ -174,4 +173,49 @@ p.name {
     display: flex;
     padding-top: 50px;
     font-size: 25px;
+}
+
+div.signup {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    background-color: #074a87;
+    margin: 50px 200px;
+    border-radius: 20px;
+}
+
+h3.bottom {
+    display: flex;
+    padding-left: 50px;
+    align-items: center;
+    color: #e5e7eb;
+    font-size: 32.0px;
+    margin-bottom: 0px;
+    width: fit-content;
+    margin-top: 20px;
+}
+
+p.bottom {
+    display: flex;
+    color: #e5e7eb;
+    font-size: 20px;
+    padding-left: 50px;
+    margin-top: 0px;
+    width: fit-content;
+}
+
+button.bottom {
+    display: flex;
+    margin-right: auto;
+    margin-left: 250px;
+    margin-bottom: 30px;
+    width: fit-content;
+    margin-top: 30px;
+}
+
+a.bottom {
+    display: flex;
+    font-size: 30px;
+    color: #e5e7eb;
+    text-decoration: none;
 }
