--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    width: 100vw;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -52,7 +53,7 @@ div.menu {
 
 .top-section {
     display: flex;
-    /* flex: 200px; */
+
     background-color: #040c24;
     padding: 50px
 }
@@ -100,7 +101,9 @@ p.top-text {
 
 .webpage {
     flex-direction: column;
+    justify-content: space-between;
     display: flex;
+    width: inherit;
 }
 
 img.helmet {
@@ -112,8 +115,7 @@ img.helmet {
     display: flex;
     flex-direction: column;
     background-color: #041335;
-    width: inherit;
-    height: 40vh;
+
 }
 
 ul.box {
@@ -163,12 +165,11 @@ img.square {
     display: flex;
     flex-direction: column;
     font-size: 36px;
-    width: inherit;
-    height: 40vh;
     justify-content: center;
     align-items: center;
-    padding-left: 400px;
-    padding-right: 400px;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 20px;
     background-color: #2e6394;
     color: #e5e7eb;
     font-style: italic;
@@ -225,4 +226,11 @@ a.bottom {
     font-size: 30px;
     color: #e5e7eb;
     text-decoration: none;
+}
+
+.container {
+    display: flex;
+    width: inherit;
+    flex-direction: column;
+    flex: 1 1 auto;
 }
